...
    <string name="enterRating">Enter Rating (G, PG-13, R, etc.)</string>
    <string name="enterScore">Enter Score (Number from 0.0 to 5.0)</string>
    <string name="countryOrigin">Country of Origin</string>
    <string name="clear">CLEAR ALL</string>

    <string-array name="genre_array">
        <item>All Genres</item>
        <item>Action</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Horror</item>
        <item>Humor</item>
        <item>Mystery</item>
        <item>Non Fiction</item>
        <item>Romance</item>
        <item>Sci-fi</item>
    </string-array>
...
