...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="true"
    tools:context=".Presentation.QuizQuestions">

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:onClick="loadNextQuestion"
...
                android:text="@string/quizText1"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="7dp"
...
                android:text="@string/quizText2"
                android:textSize="16sp"
                android:visibility="visible"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="7dp"
                android:onClick="optionSelected"
                android:text="@string/quizText2"
                android:textSize="16sp"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="7dp"
...
                android:layout_gravity="center"
                android:paddingLeft="25dp"
                android:paddingTop="100dp"
                android:paddingRight="25dp">

                <com.google.android.material.chip.Chip
                    android:id="@+id/adventureChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:checkable="true"
                    android:elevation="7dp"
                    android:onClick="loadQuestion5"
                    android:text="@string/action"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dramaChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:checkable="true"
                    android:elevation="7dp"
                    android:onClick="loadQuestion5"
...
                    android:onClick="loadQuestion6"
                    android:text="@string/ratedPG13"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/rRatedChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:checkable="true"
                    android:elevation="7dp"
                    android:onClick="loadQuestion6"
...
