...
        android:layout_marginTop="132dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="120dp"
        android:foregroundGravity="center"
        app:cardCornerRadius="15dp"
        app:cardElevation="7dp"
        app:layout_constraintBottom_toTopOf="@+id/startQuizButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
...
